# edtl

./: .env.example  .gitignore  2026-03-21-consistency-review.md  2026-03-21-data-quality-validation-ui.md  2026-03-21-docker-containerization.md  2026-03-21-feature-selection-ui.md  2026-03-21-model-monitoring-dashboard.md  2026-03-21-nfl-fourth-down-ml-pipeline.md  2026-03-21-pydantic-schemas.md  2026-03-21-statistical-interpretation-engine.md  2026-03-21-unified-etl-framework.md  2026-03-21-webgpu-llm-advisor.md  CLAUDE.md  pyproject.toml
docs/plans/: phase2-nfl-ml-pipeline.md
scripts/: train_fourth_down_model.py
snowflake/: 01_roles_and_users.sql  02_databases_and_schemas.sql  03_grants.sql  04_stages.sql  05_tasks.sql  deploy.py  setup.sql  teardown.sql
tests/: conftest.py
tests/api/: test_fourth_down.py
tests/backends/: test_duckdb_backend.py  test_snowflake_backend.py
tests/ml/: test_dataset.py  test_evaluate.py  test_model.py  test_predict.py  test_serialize.py
tests/nfl/: test_features.py  test_fourth_down_filter.py  test_ingest.py  test_parity.py  test_target.py
tests/schemas/: test_base.py  test_features.py  test_game.py  test_prediction.py  test_transforms.py
tests/transforms/: test_categorical.py  test_numeric.py  test_reference_data.py  test_temporal.py
validation/: pyproject.toml
